# UK_company_risk_monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  main.py
app/agent/: orchestrator.py  prompts.py  tools.py
app/connectors/: companies_house.py
app/models/: __init__.py  company.py  report.py
app/routes/: companies.py  dashboard.py
app/services/: analysis.py  cache.py  risk_scoring.py
app/static/: styles.css
app/templates/: base.html  report.html  search.html
migrations/: env.py
migrations/versions/: 63630d9aade5_create_companies_and_risk_reports_tables.py
scripts/: start.sh
tests/: conftest.py  test_agent.py  test_connectors.py  test_routes.py  test_scoring.py
tests/fixtures/: companies_house_charges.json  companies_house_filing_history.json  companies_house_officers.json  companies_house_profile.json  companies_house_psc.json
uk_company_risk_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
